--- a/action.yml
+++ b/action.yml
@@ -10,6 +10,9 @@ inputs:
   azure-pipeline-variables: 
     description: 'Set/Overwrite pipeline variables' 
     required: false
+  azure-template-parameters:
+    description: 'Set pipeline template parameters'
+    required: false
   azure-devops-token: 
     description: 'Paste personal access token of the user as value of secret variable:AZURE_DEVOPS_TOKEN' 
     required: true 
